--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Pixer</title>
 </head>
+<!-- ismoil ibragimov  -->
 <body>
     <header class="site-header">
         <div class="container">
